fix(css): wrong font weight on Firefox, damn

--- a/_app/assets/_less/user.less
+++ b/_app/assets/_less/user.less
@@ -4,11 +4,6 @@
 @font-size: 1.5vw;
 @line-height: 1.5;
 
-// Lighter font weight mainly for PingFang
-body {
-  font-weight: 300;
-}
-
 // Alternative title color switch
 // Uncomment the following style will enalbe alternative post title color, this is useful when you're using the custom theme from above.
 // .content { .list h2 a, header h1, header h1 a { color: @link-color; } }
